fix: projects layout is broken on mobile

--- a/src/components/contactIcon.css
+++ b/src/components/contactIcon.css
@@ -1,7 +1,7 @@
 .contactIcon {
   width: 30px;
   height:30px;
-  margin: 10px 15px 10px 15px; 
+  margin: 10px; 
   cursor: pointer;
   background-repeat: no-repeat;
   background-size: contain;
