--- a/src/components/page.css
+++ b/src/components/page.css
@@ -38,7 +38,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 290px 40px 50px 40px;
+  padding-top: 290px;
+  /* 40px 50px 40px;*/
 }
 
 a {text-decoration: none; color: #59922E;}
