--- a/src/components/redirectIcon.css
+++ b/src/components/redirectIcon.css
@@ -1,7 +1,14 @@
 .redirectIcon {
-  width:30px;
-  height:30px;
+  width:20px;
+  height:20px;
   background-image: url('/assets/images/linkxxxhdpi.png');
   background-repeat: no-repeat;
   background-size: contain;
+}
+
+@media screen and (min-width: 768px) {
+  .redirectIcon {
+    width:30px;
+    height:30px;
+  }
 }
